# The-Distance-Entropy-Based-Viewpoint-Selection-Technique-for-Accurate-3D-Reconstruction-in-NeRF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  docker-compose.yml
configs/: test.cfg
include/neural-graphics-primitives/: common.h  testbed.h
samples/: CMakeLists.txt  hemisphere_gen.cpp  hemisphere_gen.py
src/: main.cu  testbed.cu  testbed_camera.cu  testbed_nerf.cu
